--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </body>
         <script type="text/javascript">
-            const youtubeEmbedRoot = 'https://www.youtube.com/embed/Do9IUBCWMCA?autoplay=1&loop=1&controls=0&mute=1'
+            const youtubeEmbedRoot = 'https://www.youtube.com/embed/H4EZ_6M47KU?autoplay=1&loop=1&controls=0&mute=1'
             const params = (new URL(window.location.href)).searchParams
             const viewstate = params.get('viewstate') || 640
 
@@ -36,7 +36,7 @@
             video.setAttribute('width', viewstate)
             video.setAttribute('height', viewstate)
 
-            const videoId = params.get('video') || '1km9XQSc0Yw'
+            const videoId = params.get('video') || 'H4EZ_6M47KU'
             const youtubeUrl = `https://www.youtube.com/embed/${videoId}?autoplay=1&loop=1&controls=0&mute=1`
             video.setAttribute('src', youtubeUrl)
         </script>
